feat: RChat 1.0